--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <com.xlf.nrl.NsRefreshLayout
+        android:visibility="invisible"
         android:id="@+id/nrl_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,6 +20,14 @@
             app:layoutManager="LinearLayoutManager"
             tools:listitem="@layout/item_list" />
     </com.xlf.nrl.NsRefreshLayout>
+
+    <ProgressBar
+        android:visibility="visible"
+        style="?android:attr/progressBarStyleLarge"
+        android:id="@+id/news_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
     <!--<ProgressBar-->
         <!--android:visibility="visible"-->
