--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical"
     tools:context="uncle.egg.newsapp.activity.WebActivity">
 
-    <WebView
+    <uncle.egg.newsapp.module.ProgressWebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
+        android:layout_height="match_parent"></uncle.egg.newsapp.module.ProgressWebView>
 
 </LinearLayout>
